--- a/end-to-end-heart-disease-classification.ipynb
+++ b/end-to-end-heart-disease-classification.ipynb
@@ -2,21 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "283ba7c6",
+   "id": "125c991b",
    "metadata": {},
    "source": [
     "# Predicting heart disease using machine learning\n",
     "\n",
-    "This notebook looks into using various Python-based machine learning and data science libraries in an attempt to build a machine learning model capable of predicting whether or not someone has heart disease based on their medical attributes."
+    "This notebook looks into using various Python-based machine learning and data science libraries in an attempt to build a machine learning model capable of predicting whether or not someone has heart disease based on their medical attributes.\n",
+    "\n",
+    "Steps:\n",
+    "\n",
+    "1. Problem definition\n",
+    "2. Manipulating data\n",
+    "3. Evaluation\n",
+    "4. Identifying Features\n",
+    "5. Modelling\n",
+    "6. Experimentation"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa2bc5f1",
+   "cell_type": "markdown",
+   "id": "20a9ed9c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 1. Problem Definition\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
