Add Data section

--- a/end-to-end-heart-disease-classification.ipynb
+++ b/end-to-end-heart-disease-classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "125c991b",
+   "id": "96dddb44",
    "metadata": {},
    "source": [
     "# Predicting heart disease using machine learning\n",
@@ -21,12 +21,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20a9ed9c",
+   "id": "275353cf",
    "metadata": {},
    "source": [
     "## 1. Problem Definition\n",
-    "\n"
+    "\n",
+    "In a statement,\n",
+    "\n",
+    "> Given clinical parameters about a patient, can we predict whether or not they have heart disease?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6f038a7",
+   "metadata": {},
+   "source": [
+    "## 2. Data\n",
+    "\n",
+    "The original data came from the Cleavland data from the UCI Machine Learning Repository. https://archive.ics.uci.edu/ml/datasets/heart+Disease\n",
+    "\n",
+    "There is also a version of it available on Kaggle. https://www.kaggle.com/ronitf/heart-disease-uci"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff399f6d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
