--- a/end-to-end-heart-disease-classification.ipynb
+++ b/end-to-end-heart-disease-classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "96dddb44",
+   "id": "5a949e8c",
    "metadata": {},
    "source": [
     "# Predicting heart disease using machine learning\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "275353cf",
+   "id": "4c75b937",
    "metadata": {},
    "source": [
     "## 1. Problem Definition\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6f038a7",
+   "id": "c448c62e",
    "metadata": {},
    "source": [
     "## 2. Data\n",
@@ -44,12 +44,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff399f6d",
+   "cell_type": "markdown",
+   "id": "b98b3048",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 3. Evaluation\n",
+    "\n",
+    "> If we can reach 95% accuracy at predicting whether or not a patient has heart disease during the proof of concept, we'll pursue the project."
+   ]
   }
  ],
  "metadata": {
