--- a/end-to-end-heart-disease-classification.ipynb
+++ b/end-to-end-heart-disease-classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6efb96c4",
+   "id": "5f190ceb",
    "metadata": {},
    "source": [
     "# Predicting heart disease using machine learning\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "702f5a42",
+   "id": "1cd63d28",
    "metadata": {},
    "source": [
     "## 1. Problem Definition\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b39b68a8",
+   "id": "f6197246",
    "metadata": {},
    "source": [
     "## 2. Data\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19acdca8",
+   "id": "32e04017",
    "metadata": {},
    "source": [
     "## 3. Evaluation\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "034c7251",
+   "id": "caf2715e",
    "metadata": {},
    "source": [
     "## 4. Features\n",
@@ -97,6 +97,51 @@
     "    * 6: fixed defect: used to be defect but ok now\n",
     "    * 7: reversable defect: no proper blood movement when excercising\n",
     "14. target - have disease or not (1=yes, 0=no) (= the predicted attribute)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b726c4ad",
+   "metadata": {},
+   "source": [
+    "## Tool Preparation\n",
+    "\n",
+    "The following will be used for data analysis and manipulation:\n",
+    "\n",
+    "- Pandas\n",
+    "- NumPy\n",
+    "- Matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "dbc3f808",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import all the tools we need\n",
+    "\n",
+    "# Regular EDA (exploratory data analysis) and plotting libraries\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# we want our plots to appear inside the notebook\n",
+    "%matplotlib inline \n",
+    "\n",
+    "# Models from Scikit-Learn\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# Model Evaluations\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.model_selection import RandomizedSearchCV, GridSearchCV\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "from sklearn.metrics import plot_roc_curve"
    ]
   }
  ],
