Create fit_and_score function to fit and evaluate a given number of ML models

--- a/end-to-end-heart-disease-classification.ipynb
+++ b/end-to-end-heart-disease-classification.ipynb
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d20737a",
+   "id": "671ace9a",
    "metadata": {},
    "source": [
     "## 5. Modeling"
@@ -1445,7 +1445,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9f3722c0",
+   "id": "cb4be1e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1457,7 +1457,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "83cd269f",
+   "id": "8bebc8dd",
    "metadata": {},
    "outputs": [
     {
@@ -1609,7 +1609,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6746828b",
+   "id": "9d4f8d20",
    "metadata": {},
    "outputs": [
     {
@@ -1635,7 +1635,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9e598a6d",
+   "id": "512d71f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1651,7 +1651,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4e232275",
+   "id": "89163e24",
    "metadata": {},
    "outputs": [
     {
@@ -1914,7 +1914,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "53690db8",
+   "id": "2a5e0992",
    "metadata": {},
    "outputs": [
     {
@@ -1945,12 +1945,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e54ccc61",
+   "metadata": {},
+   "source": [
+    "Three models will be tested:\n",
+    "\n",
+    "1. Linear Regression\n",
+    "2. K-Nearest Neighbours Classifier\n",
+    "3. Random Forest Classifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6986c8e",
+   "id": "5edeaaeb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Put models in a dictionary\n",
+    "models = {\n",
+    "    \"Logistic Regression\": LogisticRegression(),\n",
+    "    \"KNN\": KNeighborsClassifier(),\n",
+    "    \"Random Forest\": RandomForestClassifier()\n",
+    "}\n",
+    "\n",
+    "# Function to fit an score models\n",
+    "def fit_and_score(models, X_train, X_test, y_train, y_test):\n",
+    "    \"\"\"\n",
+    "    Fits and evaluates given machine learning models.\n",
+    "    models: a dictionary of chosen sk-learn machine learning models\n",
+    "    X_train: training data (no labels)\n",
+    "    X_test: testing data (no labels)\n",
+    "    y_train: training labels\n",
+    "    y_test: testing labels\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Set random seed for reproducability\n",
+    "    np.random.seed(42)\n",
+    "    \n",
+    "    # Dictionary for model scores\n",
+    "    model_scores =  {}\n",
+    "    \n",
+    "    # Loop through models\n",
+    "    for name, model in models.items():\n",
+    "        # Fit the model to the data\n",
+    "        model.fit(X_train, y_train)\n",
+    "        # Evaluate model and append score to model_scores\n",
+    "        model_scores[name] = model.score(X_test, y_test)\n",
+    "    return model_scores"
+   ]
   }
  ],
  "metadata": {
